--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Login",
+  "name": "DefaultLayout",
   "version": "0.0.0",
   "private": true,
-  "main": "./Login.js"
+  "main": "./DefaultLayout.js"
 }
